# 3D-bbox-detector

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
kitti/: kitti_object.py  kitti_util.py  prepare_data.py
kitti/rgb_detections/: rgb_detection_train.txt
launch/: bb_publisher.launch  detector_3d.launch  detector_3d_zed.launch  frustrum_pointnet.launch
mmayavi/: viz_util.py
models/: frustum_convnet_globalfusion_v1.py  frustum_convnet_paintfusion_v1.py  frustum_convnet_v1.py  frustum_pointnets.py  model_util.py
msg/: BoundingBox2D.msg  BoundingBox2DArray.msg
nodes/: fpointnet_sub_node  kitti_pub_node  kitti_sub_node  zed_sub_node
ros/: fpointnet_sub_node.py  kitti_pub_node.py
src/frustum_pointnet/cfgs/fpointnet/: fpointnet_v1_kitti.yaml
src/frustum_pointnet/kitti/: kitti_object.py  kitti_util.py  prepare_data.py
src/frustum_pointnet/models/: frustum_convnet_densefusion_v1.py  frustum_pointnets.py
src/frustum_pointnet/ros/: sub_node_class.py
src/frustum_pointnet/train/: provider.py  provider_fusion.py  provider_paintfusion.py  test_fpointnets.py
src/frustum_pointnet/train/kitti_eval/: evaluate_object_3d_offline
train/: provider.py  provider_fpointnet.py  provider_fusion_wo_resize.py  test.py  test_fpointnets.py  train_fpointnets.py  train_nold.py
train/kitti_eval/: evaluate_object_3d_offline.cpp
