<?xml version="1.0"?>
<package format="2">
  <name>frustum_pointnet</name>
  <version>0.0.0</version>
  <description>The frustum_pointnet package</description>

  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>GPLv3</license>

  <depend>catkin</depend>
  <depend>ros_numpy</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>darknet_ros_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
